<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="cz.activate.etneteraactivate.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/logo_etna" />

        <TextView
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/headerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/proc" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/bulletListStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/bulletListStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/bulletListStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_3" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/bulletListStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_4" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/bulletListStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_5" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                style="@style/headerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/contact" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/address"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/address" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/imageButtonPhone"
                style="@style/imageButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/container_center"
                android:drawableStart="@drawable/icon_call"
                android:onClick="makeCall"
                android:text="@string/phone" />

            <Button
                android:id="@+id/container_center"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/imageButtonEmail"
                style="@style/imageButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/container_center"
                android:drawableEnd="@drawable/icon_mail"
                android:onClick="sendEmail"
                android:text="@string/email" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/blog"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/container_center2"
                android:onClick="seeBlog"
                android:text="@string/blog" />

            <Button
                android:id="@+id/container_center2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/jobs"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/container_center2"
                android:onClick="seeJobs"
                android:text="@string/jobs" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
